# webserver

./: CMakeLists.txt  README.MD  README.md
doc/: socket.md
http/: CMakeLists.txt  add.cc  build  index.html  locker.h  ocr.cc  ocr_test  submit.html  task.h  thread_pool.h  webServer  webServer.cpp
http/bu/: CMakeCache.txt  Makefile  cmake_install.cmake
http/cgi/: adder
include/: ImProcess.h  dbg.h  sock.h  transfer.h
newserver/: webserver  webserver.cc
src/: .client.cpp.swp  .server.cpp.swp  .transfer.cpp.swp  CMakeLists.txt  ImProcess.cc  client  client.cpp  d.h  e.h  server  server.cpp  sock.cc  transfer.cpp
test/: .client.cpp.swp  .server.cpp.swp  CMakeLists.txt  client.cpp  main.cpp  server.cpp
